# wpn

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  test.yml
src/wpn/: __init__.py  tui.css  tui.py
tests/: test_wpn.py
